--- a/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_DetailsSistoryAward/ZP_DetailsSistoryAwardcell/ZP_DetailsSistoryAwardTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_DetailsSistoryAward/ZP_DetailsSistoryAwardcell/ZP_DetailsSistoryAwardTableViewCell.xib
@@ -25,7 +25,7 @@
                             <constraint firstAttribute="height" constant="25" id="N81-8X-b02"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                        <state key="normal" title="5" backgroundImage="bg_white_ball_receive">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
@@ -36,7 +36,7 @@
                             <constraint firstAttribute="height" constant="25" id="lCR-vY-aIe"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                        <state key="normal" title="5" backgroundImage="bg_white_ball_receive">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
@@ -47,7 +47,7 @@
                             <constraint firstAttribute="width" constant="25" id="hn2-lc-kul"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                        <state key="normal" title="5" backgroundImage="bg_white_ball_receive">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
@@ -58,7 +58,7 @@
                             <constraint firstAttribute="width" constant="25" id="fEe-0f-qv4"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                        <state key="normal" title="5" backgroundImage="bg_white_ball_receive">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
@@ -69,7 +69,7 @@
                             <constraint firstAttribute="width" constant="25" id="Vh7-SW-lsx"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <state key="normal" title="5" backgroundImage="bg_choose_redball">
+                        <state key="normal" title="5" backgroundImage="bg_red_ball_receive">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
@@ -80,7 +80,7 @@
                             <constraint firstAttribute="height" constant="25" id="vzY-oJ-3bE"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                        <state key="normal" title="5" backgroundImage="bg_white_ball_receive">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
@@ -112,7 +112,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="bg_choose_redball" width="32" height="32"/>
-        <image name="bg_choose_whiteball_pressed" width="32" height="32"/>
+        <image name="bg_red_ball_receive" width="39" height="39"/>
+        <image name="bg_white_ball_receive" width="39" height="39"/>
     </resources>
 </document>
