--- a/DDAYGO/ViewController/My/Lottery/ZP_InstructionBet/ZP_InstructionBetHomePage/ZP_InstructionController.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_InstructionBet/ZP_InstructionBetHomePage/ZP_InstructionController.xib
@@ -380,15 +380,8 @@
                                         <constraint firstAttribute="width" constant="20" id="g00-Jz-ZhT"/>
                                     </constraints>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_explan_third" translatesAutoresizingMaskIntoConstraints="NO" id="1g0-5V-Rqd">
-                                    <rect key="frame" x="8" y="375" width="20" height="20"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="20" id="DPO-5O-iek"/>
-                                        <constraint firstAttribute="height" constant="20" id="ZQl-An-4if"/>
-                                    </constraints>
-                                </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQI-6n-ZUv">
-                                    <rect key="frame" x="36" y="383" width="256" height="34"/>
+                                    <rect key="frame" x="36" y="382" width="256" height="41"/>
                                     <attributedString key="attributedText">
                                         <fragment content="下期(二期):每月16日~月底累積點數，隔月1日~5日填寫(若未在指定時間填寫並送出，視同放棄)，隔月6日~15日兌獎(以美國樂透6日以後的第一個開獎日為兌獎時間，開獎隔日公司公告對獎號碼)。">
                                             <attributes>
@@ -414,7 +407,7 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ysZ-Kc-QPI">
-                                    <rect key="frame" x="36" y="447" width="256" height="25"/>
+                                    <rect key="frame" x="36" y="453" width="256" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="PB7-EW-fY8"/>
                                     </constraints>
@@ -429,7 +422,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nsd-A7-PBG">
-                                    <rect key="frame" x="36" y="480" width="256" height="25"/>
+                                    <rect key="frame" x="36" y="485" width="256" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="JxX-1V-b6I"/>
                                     </constraints>
@@ -444,7 +437,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_explan_six" translatesAutoresizingMaskIntoConstraints="NO" id="OPF-TV-5dz">
-                                    <rect key="frame" x="8" y="480" width="20" height="20"/>
+                                    <rect key="frame" x="8" y="485" width="20" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="Lhj-6b-1zH"/>
                                         <constraint firstAttribute="height" constant="20" id="MZB-aU-ckx"/>
@@ -485,11 +478,18 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="促銷彩為供貨商回饋公司手續費之10%，這個10%全部作為100%分配至各獎項。" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOJ-eR-xBX">
-                                    <rect key="frame" x="36" y="422" width="256" height="20"/>
+                                    <rect key="frame" x="36" y="422" width="256" height="30"/>
                                     <fontDescription key="fontDescription" name=".PingFangSC-Regular" family=".PingFang SC" pointSize="9"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_explan_third" translatesAutoresizingMaskIntoConstraints="NO" id="1g0-5V-Rqd">
+                                    <rect key="frame" x="6" y="382" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="20" id="DPO-5O-iek"/>
+                                        <constraint firstAttribute="height" constant="20" id="ZQl-An-4if"/>
+                                    </constraints>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
@@ -497,17 +497,17 @@
                                 <constraint firstItem="XHn-Qb-NeU" firstAttribute="top" secondItem="qUD-Eb-97t" secondAttribute="bottom" constant="48" id="0Jt-gP-lLz"/>
                                 <constraint firstAttribute="trailing" secondItem="XHn-Qb-NeU" secondAttribute="trailing" constant="29" id="0la-Zp-sqb"/>
                                 <constraint firstItem="vOJ-eR-xBX" firstAttribute="trailing" secondItem="ysZ-Kc-QPI" secondAttribute="trailing" id="18U-fP-yUx"/>
-                                <constraint firstItem="xMe-bf-Gcj" firstAttribute="top" secondItem="1g0-5V-Rqd" secondAttribute="bottom" constant="27" id="1Mc-Hy-yMi"/>
+                                <constraint firstItem="xMe-bf-Gcj" firstAttribute="top" secondItem="1g0-5V-Rqd" secondAttribute="bottom" constant="20" id="1Mc-Hy-yMi"/>
                                 <constraint firstItem="xfh-kG-h4j" firstAttribute="top" secondItem="kFY-qV-d3T" secondAttribute="bottom" constant="44" id="1hL-3n-aCu"/>
                                 <constraint firstItem="h3F-fq-fpo" firstAttribute="top" secondItem="659-LA-Aa6" secondAttribute="bottom" constant="5" id="2Da-fH-fS8"/>
                                 <constraint firstItem="IC1-Ec-cwc" firstAttribute="width" secondItem="MCv-xW-zuA" secondAttribute="width" id="2Lb-ND-CJa"/>
                                 <constraint firstItem="f8y-Pm-aEw" firstAttribute="top" secondItem="nl9-Kh-uIR" secondAttribute="bottom" constant="5" id="2xp-T8-ZCJ"/>
-                                <constraint firstItem="gQI-6n-ZUv" firstAttribute="leading" secondItem="1g0-5V-Rqd" secondAttribute="trailing" constant="8" id="3BD-Px-TNF"/>
+                                <constraint firstItem="gQI-6n-ZUv" firstAttribute="leading" secondItem="1g0-5V-Rqd" secondAttribute="trailing" constant="10" id="3BD-Px-TNF"/>
                                 <constraint firstItem="UKQ-hX-b0H" firstAttribute="leading" secondItem="zml-NN-O7f" secondAttribute="leading" constant="36" id="3nn-Ii-V7d"/>
                                 <constraint firstItem="nS0-h4-1kg" firstAttribute="leading" secondItem="zml-NN-O7f" secondAttribute="leading" constant="8" id="3sv-SY-ZEu"/>
                                 <constraint firstItem="OJh-iD-5Xa" firstAttribute="leading" secondItem="zml-NN-O7f" secondAttribute="leading" id="3uq-uk-ad3"/>
                                 <constraint firstItem="14f-lB-49u" firstAttribute="leading" secondItem="gVi-Ua-aoT" secondAttribute="trailing" constant="5" id="4xg-1v-TZ8"/>
-                                <constraint firstItem="vOJ-eR-xBX" firstAttribute="top" secondItem="gQI-6n-ZUv" secondAttribute="bottom" constant="5" id="55r-fe-TWO"/>
+                                <constraint firstItem="vOJ-eR-xBX" firstAttribute="top" secondItem="gQI-6n-ZUv" secondAttribute="bottom" constant="-1" id="55r-fe-TWO"/>
                                 <constraint firstItem="1H9-41-n2U" firstAttribute="leading" secondItem="y6J-X6-6AT" secondAttribute="trailing" constant="5" id="5C2-Lb-HYn"/>
                                 <constraint firstItem="RoD-ci-3iv" firstAttribute="leading" secondItem="zml-NN-O7f" secondAttribute="leading" constant="8" id="5ap-By-ftZ"/>
                                 <constraint firstItem="IC1-Ec-cwc" firstAttribute="leading" secondItem="MCv-xW-zuA" secondAttribute="trailing" id="5xE-CZ-ygg"/>
@@ -555,7 +555,7 @@
                                 <constraint firstItem="nS0-h4-1kg" firstAttribute="top" secondItem="xMe-bf-Gcj" secondAttribute="bottom" constant="11" id="Nes-Tt-4jf"/>
                                 <constraint firstItem="MCv-xW-zuA" firstAttribute="leading" secondItem="OJh-iD-5Xa" secondAttribute="trailing" id="Npy-if-Kuq"/>
                                 <constraint firstItem="duc-mz-dBT" firstAttribute="top" secondItem="ebY-gj-w1f" secondAttribute="bottom" constant="5" id="OCY-d5-VEQ"/>
-                                <constraint firstItem="OPF-TV-5dz" firstAttribute="top" secondItem="nS0-h4-1kg" secondAttribute="bottom" constant="7" id="OEJ-GT-Bbw"/>
+                                <constraint firstItem="OPF-TV-5dz" firstAttribute="top" secondItem="nS0-h4-1kg" secondAttribute="bottom" constant="12" id="OEJ-GT-Bbw"/>
                                 <constraint firstItem="nl9-Kh-uIR" firstAttribute="top" secondItem="3Ig-My-UsJ" secondAttribute="bottom" constant="5" id="ORN-7e-gDG"/>
                                 <constraint firstItem="EnQ-EF-PmL" firstAttribute="leading" secondItem="1H9-41-n2U" secondAttribute="trailing" constant="5" id="OlL-F2-MZ7"/>
                                 <constraint firstItem="N7F-Wx-FpQ" firstAttribute="centerX" secondItem="zml-NN-O7f" secondAttribute="centerX" id="PhM-Ta-0K6"/>
@@ -569,8 +569,8 @@
                                 <constraint firstItem="nsd-A7-PBG" firstAttribute="leading" secondItem="OPF-TV-5dz" secondAttribute="trailing" constant="8" id="Uky-xo-1r8"/>
                                 <constraint firstItem="qUD-Eb-97t" firstAttribute="top" secondItem="gDJ-mJ-7Dj" secondAttribute="bottom" constant="5" id="Utd-Va-gQq"/>
                                 <constraint firstItem="6tQ-P8-7f5" firstAttribute="leading" secondItem="h3F-fq-fpo" secondAttribute="trailing" id="V3g-J0-su4"/>
-                                <constraint firstItem="nsd-A7-PBG" firstAttribute="top" secondItem="ysZ-Kc-QPI" secondAttribute="bottom" constant="8" id="VUm-Ia-smW"/>
-                                <constraint firstItem="1g0-5V-Rqd" firstAttribute="top" secondItem="d6p-Ex-kor" secondAttribute="bottom" constant="16" id="Vz3-o0-XDS"/>
+                                <constraint firstItem="nsd-A7-PBG" firstAttribute="top" secondItem="ysZ-Kc-QPI" secondAttribute="bottom" constant="7" id="VUm-Ia-smW"/>
+                                <constraint firstItem="1g0-5V-Rqd" firstAttribute="top" secondItem="d6p-Ex-kor" secondAttribute="bottom" constant="23" id="Vz3-o0-XDS"/>
                                 <constraint firstItem="659-LA-Aa6" firstAttribute="top" secondItem="Mmt-0u-EJZ" secondAttribute="bottom" constant="5" id="WXz-2t-d1z"/>
                                 <constraint firstItem="gDJ-mJ-7Dj" firstAttribute="leading" secondItem="XsL-pl-7bZ" secondAttribute="trailing" constant="5" id="WZY-G5-jis"/>
                                 <constraint firstItem="f8y-Pm-aEw" firstAttribute="leading" secondItem="XsL-pl-7bZ" secondAttribute="trailing" constant="5" id="XQm-5H-DYL"/>
@@ -582,12 +582,12 @@
                                 <constraint firstItem="6tQ-P8-7f5" firstAttribute="leading" secondItem="EnQ-EF-PmL" secondAttribute="trailing" constant="5" id="ZBa-8d-8yZ"/>
                                 <constraint firstItem="O4d-Uv-2TT" firstAttribute="leading" secondItem="14f-lB-49u" secondAttribute="trailing" constant="5" id="aFW-AZ-L27"/>
                                 <constraint firstAttribute="trailing" secondItem="whq-Wc-LOd" secondAttribute="trailing" constant="8" id="af4-5T-eNS"/>
-                                <constraint firstItem="1g0-5V-Rqd" firstAttribute="leading" secondItem="zml-NN-O7f" secondAttribute="leading" constant="8" id="bSa-hO-WBW"/>
+                                <constraint firstItem="1g0-5V-Rqd" firstAttribute="leading" secondItem="zml-NN-O7f" secondAttribute="leading" constant="6" id="bSa-hO-WBW"/>
                                 <constraint firstItem="duc-mz-dBT" firstAttribute="top" secondItem="kFY-qV-d3T" secondAttribute="bottom" constant="-10" id="c7J-tJ-OZ7"/>
                                 <constraint firstItem="6tQ-P8-7f5" firstAttribute="leading" secondItem="659-LA-Aa6" secondAttribute="trailing" constant="5" id="cCQ-ZG-EZg"/>
                                 <constraint firstItem="08y-sG-8E9" firstAttribute="top" secondItem="Etl-hv-JJ9" secondAttribute="bottom" constant="5" id="cHa-Zq-HBS"/>
                                 <constraint firstItem="OPF-TV-5dz" firstAttribute="leading" secondItem="zml-NN-O7f" secondAttribute="leading" constant="8" id="cIP-hc-ipd"/>
-                                <constraint firstItem="vOJ-eR-xBX" firstAttribute="bottom" secondItem="xMe-bf-Gcj" secondAttribute="bottom" id="cNe-Ks-Gt6"/>
+                                <constraint firstItem="vOJ-eR-xBX" firstAttribute="bottom" secondItem="xMe-bf-Gcj" secondAttribute="bottom" constant="10" id="cNe-Ks-Gt6"/>
                                 <constraint firstItem="MCv-xW-zuA" firstAttribute="top" secondItem="zml-NN-O7f" secondAttribute="top" id="e0v-r2-2L2"/>
                                 <constraint firstItem="UKQ-hX-b0H" firstAttribute="top" secondItem="N7F-Wx-FpQ" secondAttribute="bottom" id="e9N-5z-Gjw"/>
                                 <constraint firstItem="cZD-jz-gA0" firstAttribute="top" secondItem="wYy-4l-GqU" secondAttribute="bottom" constant="5" id="fAM-IU-zS9"/>
@@ -595,7 +595,7 @@
                                 <constraint firstItem="1H9-41-n2U" firstAttribute="top" secondItem="zml-NN-O7f" secondAttribute="top" constant="30" id="gRV-ck-dG8"/>
                                 <constraint firstAttribute="trailing" secondItem="cZD-jz-gA0" secondAttribute="trailing" constant="1" id="gep-7X-4zO"/>
                                 <constraint firstItem="gVi-Ua-aoT" firstAttribute="top" secondItem="cZD-jz-gA0" secondAttribute="bottom" constant="5" id="hDP-Ng-vdR"/>
-                                <constraint firstItem="ysZ-Kc-QPI" firstAttribute="top" secondItem="vOJ-eR-xBX" secondAttribute="bottom" constant="5" id="hyL-6m-fLY"/>
+                                <constraint firstItem="ysZ-Kc-QPI" firstAttribute="top" secondItem="vOJ-eR-xBX" secondAttribute="bottom" constant="1" id="hyL-6m-fLY"/>
                                 <constraint firstItem="cZD-jz-gA0" firstAttribute="leading" secondItem="zml-NN-O7f" secondAttribute="leading" constant="1" id="iGW-mG-Wjg"/>
                                 <constraint firstItem="cZD-jz-gA0" firstAttribute="top" secondItem="EnQ-EF-PmL" secondAttribute="bottom" constant="5" id="iOc-cx-tuZ"/>
                                 <constraint firstItem="xfh-kG-h4j" firstAttribute="top" secondItem="DeC-z6-0Dq" secondAttribute="bottom" id="j9X-73-wGD"/>
@@ -612,7 +612,7 @@
                                 <constraint firstItem="DeC-z6-0Dq" firstAttribute="leading" secondItem="QyR-mU-Gvh" secondAttribute="trailing" id="lKg-tr-awZ"/>
                                 <constraint firstItem="wYy-4l-GqU" firstAttribute="leading" secondItem="QyR-mU-Gvh" secondAttribute="trailing" constant="5" id="lLU-zo-9wC"/>
                                 <constraint firstItem="14f-lB-49u" firstAttribute="leading" secondItem="DeC-z6-0Dq" secondAttribute="trailing" id="m0N-O2-Zpx"/>
-                                <constraint firstItem="gQI-6n-ZUv" firstAttribute="top" secondItem="whq-Wc-LOd" secondAttribute="bottom" constant="9" id="m96-Zp-JKt"/>
+                                <constraint firstItem="gQI-6n-ZUv" firstAttribute="top" secondItem="whq-Wc-LOd" secondAttribute="bottom" constant="8" id="m96-Zp-JKt"/>
                                 <constraint firstItem="cZD-jz-gA0" firstAttribute="top" secondItem="y6J-X6-6AT" secondAttribute="bottom" constant="5" id="mIM-Vk-zWx"/>
                                 <constraint firstAttribute="width" secondItem="zml-NN-O7f" secondAttribute="height" multiplier="50:87" id="mTq-Ez-lBH"/>
                                 <constraint firstItem="duc-mz-dBT" firstAttribute="leading" secondItem="14f-lB-49u" secondAttribute="trailing" id="mgN-PE-Awu"/>
