--- a/DDAYGO/ViewController/My/Supplier/SupplierCell/SupplierTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Supplier/SupplierCell/SupplierTableViewCell.xib
@@ -27,7 +27,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qAy-UT-e16">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qAy-UT-e16">
                         <rect key="frame" x="110" y="25" width="200" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="9LR-NU-uyB"/>
